--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
     <title>Wordpress Reboot</title>
     <body>
         <div class="container">
-                <header>
-                    <div class="violet"></div>
-                    <div class="beige"></div>
-        </header>
+            <header>
+                    <div class="header">
+                        <img class="logo" src="img\logo.png" alt="logo">
+                            <nav>
+                                <ul>
+                                    <li><a href="#"></a>FEATURES</li>
+                                    <li><a href="#"></a>EDITORIALS</li>
+                                    <li><a href="#"></a>ENVIRONMENT</li>
+                                    <li><a href="#"></a>BLOG</li>
+                                    <li><a href="#"></a>SHOP</li>
+                                    <li><a href="#"></a>CONTACT</li>
+                                </ul>
+                            </nav> 
+                     </div>     
+            </header>
 
-        <main>
+            <main>
+                <div class="yoga">
+                    <h1>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum, atque doloribus <br> numquam 
+                        debitis quibusdam sunt unde facilis optio quia...</p>
+                </div>
                 <div class="light-blue">
                     <div class="riquadro-top"></div>
                     <div class="riquadro"></div>
@@ -22,7 +38,7 @@
                 
                 </div>
              
-        </main>
+            </main>
 
             <footer>
                 <div class="purple"></div>
