--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <h5>Lorem ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt vitae cumque quibusdam commodi iure rerum necessitatibus praesentium inventore iusto debitis laudantium fuga nobis animi, ratione saepe ab numquam ipsa voluptate? dolor sit amet consectetur, adipisicing elit. Fuga nam, corporis quasi libero ut laboru sit odio nisi culpa, architecto quae?</h5>
                     </div>
                     
-                    <div class="riquadro big">
+                    <div class="riquadro">
                         <h3>Ipsum</h3>
                         <h5>Lorem ipsum dolor, Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus tempora facere dolore vero et nemo quae quibusdam sint, exercitationem aliquam doloremque ducimus, vel quos eligendi est laborum qui provident sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero itaque fugit in magni! Odio saepe, praesentium quis officiis id labore, voluptatibus aspernatur molestias fugit cumque necessitatibus nobis assumenda quas consectetur. sit amet consectetur adipisicing elit. Distinctio dicta placeat eveniet temporibus, incidunt saepe pariatur odit enim tenetur nesciunt suscipit tempora recusandae porro modi animi consectetur id. Temporibus, provident! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti numquam ducimus consequuntur, earum cupiditate praesentium suscipit voluptas non repudiandae rerum? Esse reprehenderit enim praesentium vel hic magni omnis ex dolore?</h5>
                     </div>
